--- a/Interrogation des données/TER/nbproject/project.properties
+++ b/Interrogation des données/TER/nbproject/project.properties
@@ -29,16 +29,51 @@ dist.jar=${dist.dir}/TER.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-codec-1.6.jar=jar/commons-codec-1.6.jar
+file.reference.commons-logging-1.2.jar=jar/commons-logging-1.2.jar
+file.reference.httpclient-4.2.3.jar=jar/httpclient-4.2.3.jar
+file.reference.httpcore-4.2.2.jar=jar/httpcore-4.2.2.jar
 file.reference.java-json.jar=C:\\Users\\proprietaire\\Desktop\\TER\\JSON\\java-json.jar
+file.reference.jcl-over-slf4j-1.6.4.jar=jar/jcl-over-slf4j-1.6.4.jar
+file.reference.jena-arq-2.11.0.jar=jar/jena-arq-2.11.0.jar
+file.reference.jena-core-2.11.0.jar=jar/jena-core-2.11.0.jar
+file.reference.jena-iri-0.9.5.jar=jar/jena-iri-0.9.5.jar
+file.reference.jena-sdb-1.4.0.jar=jar/jena-sdb-1.4.0.jar
+file.reference.jena-tdb-1.0.0.jar=jar/jena-tdb-1.0.0.jar
+file.reference.log4j-1.2.16.jar=jar/log4j-1.2.16.jar
+file.reference.opencsv-2.2.jar=C:\\Users\\proprietaire\\Desktop\\TER\\OpenCSV\\opencsv-2.2.jar
+file.reference.org-apache-commons-logging.jar=jar/org-apache-commons-logging.jar
 file.reference.postgresql-9.4.1208.jre6.jar=C:\\Users\\proprietaire\\Desktop\\TER\\Base de donn\u00e9es\\postgresql-9.4.1208.jre6.jar
+file.reference.slf4j-api-1.6.4.jar=jar/slf4j-api-1.6.4.jar
+file.reference.slf4j-log4j12-1.6.4.jar=jar/slf4j-log4j12-1.6.4.jar
+file.reference.xercesImpl-2.11.0.jar=jar/xercesImpl-2.11.0.jar
+file.reference.xml-apis-1.4.01.jar=jar/xml-apis-1.4.01.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.postgresql-9.4.1208.jre6.jar}:\
-    ${file.reference.java-json.jar}
+    ${file.reference.java-json.jar}:\
+    ${file.reference.opencsv-2.2.jar}:\
+    ${file.reference.jena-arq-2.11.0.jar}:\
+    ${file.reference.jena-core-2.11.0.jar}:\
+    ${file.reference.jena-iri-0.9.5.jar}:\
+    ${file.reference.jena-sdb-1.4.0.jar}:\
+    ${file.reference.jena-tdb-1.0.0.jar}:\
+    ${file.reference.log4j-1.2.16.jar}:\
+    ${file.reference.commons-codec-1.6.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.org-apache-commons-logging.jar}:\
+    ${file.reference.slf4j-log4j12-1.6.4.jar}:\
+    ${file.reference.xercesImpl-2.11.0.jar}:\
+    ${file.reference.xml-apis-1.4.01.jar}:\
+    ${file.reference.httpclient-4.2.3.jar}:\
+    ${file.reference.httpcore-4.2.2.jar}:\
+    ${file.reference.jcl-over-slf4j-1.6.4.jar}:\
+    ${file.reference.slf4j-api-1.6.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
